--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 </head>
 
 <body>
-  <section class="background">
+  <section class="background background1">
 
     <section class="top ">
-      <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+      <nav class="navbar navbar-expand-lg navbar-dark ">
         <a class="navbar-brand font-weight-bold navname pl-5" href="#">Woof</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -50,7 +50,7 @@
     </section>
 
   </section>
-  <section id="About">
+  <section  id="About">
 
     <div class="About">
       <h1>About /></h1>
@@ -61,17 +61,17 @@
   </section>
   <section id="Donate">
  <div class="Donate" >
-  <p class="donatebg">I hope you Understand the pain of this dogs.<br>
+  <p>I hope you Understand the pain of this dogs.<br>
     To support us please Donate.
   </p>
-  <span class="donatebg linear-wipe">Donate</span>
+  <p class=" linear-wipe">Donate</p>
    <form class="space"><script  src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_Hh5Vu0bv1auDtv" async> </script> </form>
    </div>
   </section>
   <footer id="footer">
 
     <p class="footer-p"><i class="fab fa-twitter"></i> <i class="fab fa-facebook"></i> <i class="fab fa-instagram"></i> <i class="fas fa-envelope"></i></p>
-    <p >© Copyright 2021 Subham kumar</p>
+    <p style="font-size:1rem;">© Copyright 2021 Subham kumar</p>
 
   </footer>
   <!-- Optional JavaScript -->
