--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2&family=Contrail+One&display=swap" rel="stylesheet">
-  <title>Hello, world!</title>
+  <title>WoofDonate</title>
 </head>
 
 <body>
