--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
     <section class="top ">
       <nav class="navbar navbar-expand-lg navbar-dark ">
         <a class="navbar-brand font-weight-bold navname pl-5" href="#">Woof</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+    
 
         <div class="collapse navbar-collapse px-5" id="navbarSupportedContent ">
           <ul class="navbar-nav ml-auto " name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -43,30 +41,33 @@
 
       <div class="top-cont">
 
-        <p>" I'm the boy that wants to <br> bring every stray animal  <br> I see home just so they <br> can feel loved and safe "
+        <p>" I'm the boy that wants to <br> bring every stray animal <br> I see home just so they <br> can feel loved and safe "
         </p>
 
       </div>
     </section>
 
   </section>
-  <section  id="About">
+  <section id="About">
 
     <div class="About">
       <h1>About /></h1>
-    <p class="about1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. A diam maecenas sed enim ut. Justo eget magna fermentum iaculis. Nunc sed id semper risus in. Vitae aliquet nec ullamcorper sit amet risus. Eget magna fermentum iaculis eu non diam. Aliquet enim tortor at auctor urna nunc.</p>
-    <img class="frame" src="Css/image/p1.jpg" alt="">
+      <p class="about1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. A diam maecenas sed enim ut. Justo eget magna fermentum iaculis. Nunc sed id semper risus in. Vitae aliquet nec ullamcorper sit amet risus. Eget magna fermentum iaculis
+        eu non diam. Aliquet enim tortor at auctor urna nunc.</p>
+      <img class="frame" src="Css/image/p1.jpg" alt="">
     </div>
 
   </section>
   <section id="Donate">
- <div class="Donate" >
-  <p>I hope you Understand the pain of this dogs.<br>
-    To support us please Donate.
-  </p>
-  <p class=" linear-wipe">Donate</p>
-   <form class="space"><script  src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_Hh5Vu0bv1auDtv" async> </script> </form>
-   </div>
+    <div class="Donate">
+      <p>I hope you Understand the pain of this dogs.<br>
+        To support us please Donate.
+      </p>
+      <p class=" linear-wipe">Donate</p>
+      <form class="space">
+        <script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_Hh5Vu0bv1auDtv" async> </script>
+      </form>
+    </div>
   </section>
   <footer id="footer">
 
